--- a/package.json
+++ b/package.json
@@ -1,1 +1,23 @@
-{"name":"poker-club-server","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"express":"^4.18.2","cors":"^2.8.5","sqlite3":"^5.1.6"}} 
+{
+  "name": "poker-club-server",
+  "version": "1.0.0",
+  "description": "API сервер для Poker Club Telegram Mini App",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": ["poker", "telegram", "mini-app", "api"],
+  "author": "Poker Club",
+  "license": "MIT"
+}
